price plan modal input field spacing fixed

--- a/src/scss/layout/_price-plan.scss
+++ b/src/scss/layout/_price-plan.scss
@@ -92,6 +92,14 @@
     position: relative;
     width: 100%;
     height: 48px;
+
+    &-group {
+      margin-bottom: 16px;
+      label {
+        margin-bottom: 8px;
+      }
+    }
+
     input {
       width: inherit;
       height: inherit;
